Opened 12 years ago
Closed 12 years ago
#1330 closed bug (fixed)
PANIC: block_cache_set_dirty(): not yet implemented that way!
Reported by: | kaliber | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | File Systems/FAT | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
Reproduce:
- Mount dos (fat) partition
- Run sync command
Is this panic really required?
Change History (3)
comment:1 by , 12 years ago
comment:2 by , 12 years ago
Component: | File Systems → File Systems/FAT |
---|
Bug #1484 is a duplicate of this one and has a stack trace.
Note:
See TracTickets
for help on using tickets.
In a productions system definitely not, in Haiku it currently is :-)