* block_cache_set_dirty() was used incorrectly; I wonder why I write any   documentation... when you ask the block cache for a writable block, it's   automatically dirty. * This fixes bug #1330. * Minor style cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22317 a95241bf-73f2-0310-859d-f6bbb57e9c96